[package]
name = "cruded_re-animation"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.166"
serde_json = "1.0.99"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.x"
user32-sys = "0.2.x"

[target.'cfg(unix)'.dependencies]
dialog-box = "0.1.x"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
