[package]
name = "cruel_soul"
edition = "2021"

version = "1.1.0"
authors = ["Ewheeler121 <ewheeler121@outlook.com>"]
readme = "README.md"
repository = "https://github.com/Ewheeler121/Cruel-Soul"
build = "build.rs"

[dependencies]
serde = "1.0.166"
serde_json = "1.0.99"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.x"
user32-sys = "0.2.x"

[target.'cfg(unix)'.dependencies]
dialog-box = "0.1.x"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
